# OpenGL-playground

./: .gitignore  CMakeLists.txt  README.md
resources/: scene.json
src/camera/: camera.cpp  camera.hpp
src/engine/: Engine.cpp  Engine.h  Engine.hpp  Scene.cpp  Scene.hpp  SceneObject.cpp  SceneObject.hpp  main.cpp
src/gui/: Gui.cpp  Gui.hpp
src/model/: mesh.cpp  mesh.hpp  model.cpp  model.hpp
src/processing/: light.cpp  light.hpp  material.cpp  material.hpp  shader.cpp  shader.hpp  shape.cpp  shape.hpp  skybox.cpp  skybox.hpp  texture.cpp
src/scene/: Scene.cpp  Scene.hpp  SceneObject.cpp  SceneObject.hpp
